src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Operator_GUID__c</fullName>
        <label>Operator GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Name__c</fullName>
        <inlineHelpText>The company operating the site. This includes name, address and GUID (reference GIS).</inlineHelpText>
        <label>Operator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Country__c</fullName>
        <description>Use the related Account Country, if not sure.</description>
        <inlineHelpText>Select the country where the case was raised</inlineHelpText>
        <label>Originating Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <formula>IF(ISBLANK(Owner:User.Id),&quot;Queue&quot;,&quot;User&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Owner__c</fullName>
        <description>Parent Owner</description>
        <formula>Parent.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_reminder__c</fullName>
        <description>Used in NPS</description>
        <label>Participant reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority_Formula__c</fullName>
        <formula>IF( ISPICKVAL(Priority, &apos;High&apos;),

IMAGE( &quot;/img/samples/flag_red.gif&quot;,&quot;High&quot;)+&apos;High&apos;,

IF(ISPICKVAL(Priority, &apos;Medium&apos;),

IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Medium&quot;)+&apos;Medium&apos;,

IMAGE( &quot;/img/samples/flag_green.gif&quot;,&quot;Low&quot;)+&apos;Low&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Aluminium Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buildings and Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cables and Cable Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborative Production Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Vehicle Charging Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator Circuit Breakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Sciences Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Voltage Products and Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Power Transmission Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Voltage Products and Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metallurgy Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motion Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors and Generators</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>From Master Data Management Hierarchy</description>
        <inlineHelpText>Select the Product Group relevant for the case</inlineHelpText>
        <label>Product Group</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>1339 - Non-Core Various</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1342 - Various</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1722 - Thermal &amp; Water Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1723 - Power and Water Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1724 - Renewable Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1728 - Automation Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2106 - Gas Insulated Switchgear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2108 - HV Breakers &amp; Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2111 - Common Apparatus &amp; Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2115 - Generator Circuit Breakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2127 - Other High Voltage Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2128 - Capacitors and Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2129 - Instrument Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2132 - HV Testing Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2214 - Offshore Wind Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2215 - HVDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2217 - FACTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2221 - OWC Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2222 - HVDC Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2223 - FACTS Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2224 - Power Cables Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2401 - Distribution Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2404 - Small Power Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2408 - Large and Medium Power Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2409 - Dry Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2413 - Transformer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2425 - Insulation and Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2451 - Domestic Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2617 - Domestic Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2657 - High Voltage Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_category_ServIS__c</fullName>
        <inlineHelpText>Installation category. The keywords are defined by Div/Pgs.</inlineHelpText>
        <label>Product category ServIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <description>Product/Order Information</description>
        <label>Project Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Of_Work__c</fullName>
        <inlineHelpText>These are the service category values from Master Data.</inlineHelpText>
        <label>Reason Of Work</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Life Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering and Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensions, Upgrades and Retrofits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation and Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spares and Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_Identifier__c</fullName>
        <formula>CASE(Account.RecordType.Name,&apos;ABB ICV&apos;,Account.ICV_ID__c,&apos;GIS Approved&apos;,Account.GUID__c,&apos;Default&apos;, Account.TUID__c,&apos;Not Applicable&apos;)</formula>
        <label>Related Account Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <label>Related Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <formula>CEILING (ClosedDate - Response_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in report to find the time spent in resolving a case</inlineHelpText>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <description>Case Response time (Time from “Case Status is New” TO the First Time Response i.e. “Case Status is Contacted”)</description>
        <label>Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rfp_A1__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>A1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_A2__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>A2</label>
        <picklist>
            <picklistValues>
                <fullName>Budgetary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Approval_Decision_Date__c</fullName>
        <description>Approval Decision Date - Created as part of  R5 Req 2461</description>
        <label>Approval Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Approved__c</fullName>
        <description>Approved - Created as part of  R5 Req 2461</description>
        <label>Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Comments__c</fullName>
        <description>Comments - Created as part of R5 Req 2461</description>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Due_Date__c</fullName>
        <description>R5 - Due Date</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Notice_Submission_Date__c</fullName>
        <description>R5- Notice Submission date</description>
        <label>Notice Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Opportunity - Created as part of R5  Req 2461</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rfp_Q1__c</fullName>
        <defaultValue>&quot;Does ABB have influence on the customer RFQ/Specification ?&quot;</defaultValue>
        <description>R5 - Created as part of Req 2461</description>
        <label>Q1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Q2__c</fullName>
        <defaultValue>&quot;Is the project Budgetary or Funded?&quot;</defaultValue>
        <description>R5 - Created as part of Req 2461</description>
        <label>Q2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Root Cause Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Number__c</fullName>
        <description>Product/Order Information</description>
        <label>SAP Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <description>Product/Order Information</description>
        <label>Sales Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Also System ID. For Warranty Claim either Serial Number or ABB Order Number must be filled. Recommended for Technical Inquiry and Product Information</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServIS_BU__c</fullName>
        <label>ServIS BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServIS_Division__c</fullName>
        <label>ServIS Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServIS_ProductGroup__c</fullName>
        <label>ServIS ProductGroup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Agreement__c</fullName>
        <description>Ignore this field IF the Case is about a Warranty Claim, a Product Information or a Complaint.</description>
        <inlineHelpText>Service Agreement Number for the Account or the site</inlineHelpText>
        <label>Service Agreement</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <inlineHelpText>Examples for selecting the correct priority:
Normal -  normal response time
Medium - small operational impact or near term deadline
High -  potential process or business impact
Critical -  potential health &amp; safety problem or operational impact</inlineHelpText>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <inlineHelpText>Address where the site is located. In most cases equals to the postal address.</inlineHelpText>
        <label>Site Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Country__c</fullName>
        <inlineHelpText>The name of the country where the site is located. The name represents the current official political status of the country according to ISO 3166-1 standard.</inlineHelpText>
        <label>Site Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Geo_Location__c</fullName>
        <inlineHelpText>Site geographic longitude and latitude</inlineHelpText>
        <label>Site Geo Location</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <description>R5 : R-2222 : To store the value of site id which is populated by ServIS</description>
        <label>Site Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Link__c</fullName>
        <formula>if(LEN(Site_Id__c)&gt;0,(HYPERLINK(&quot;https://de-s-0199933.de.abb.com/servis/goto.php?&quot;&amp;Site_Id__c, &apos;Link to ServIS&apos;)),&apos;No site available&apos;)</formula>
        <label>Site Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <inlineHelpText>Name of the plant/site/vessel, the &quot;nickname&quot; this plant is known by. In most cases (but not always) it consists of: (Owner name or abbr. + city + Plant Type)</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_End_Date__c</fullName>
        <defaultValue>TODAY() +14</defaultValue>
        <description>Used for NPS
Default today + 14</description>
        <label>Survey End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Not_Required_Reason__c</fullName>
        <inlineHelpText>Please enter the reason if NPS Survey is not required</inlineHelpText>
        <label>Survey Not Required Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Resolution_Date__c</fullName>
        <label>Target Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_to_1st_Response__c</fullName>
        <description>VALUE( MID( TEXT( X1st_Response__c - CreatedDate ), 12, 2 ) )</description>
        <formula>IF( ((Response_Time__c - CreatedDate)*24)&gt; 24, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to 1st Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Customer_via_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected, system will automatically send the closure email to customer.</inlineHelpText>
        <label>Update Customer via Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Not_Required_Reason__c</fullName>
        <inlineHelpText>Please enter the reason if &apos;Update Customer Via Email&apos; is not selected or checked.</inlineHelpText>
        <label>Update Not Required Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Status_Formula__c</fullName>
        <formula>if(
   AND(
       NOT(ISNULL(Customer_Warranty_startdate__c)),
       TODAY() &lt; Customer_Warranty_startdate__c
      ),
   &apos;In Future&apos;,
    if(
       AND(
           NOT(ISNULL(Customer_Warranty_startdate__c)),
           NOT(ISNULL(Customer_Warranty_enddate__c)),
           Customer_Warranty_startdate__c &lt;= TODAY(),
           TODAY() &lt;= Customer_Warranty_enddate__c
          ),
      &apos;Active&apos;,
      if(
         AND(
             NOT(ISNULL(Customer_Warranty_enddate__c)),
             TODAY() &gt; Customer_Warranty_enddate__c
            ),
        &apos;Expired&apos;,
        &apos;No Data&apos;
        )
     )
  )</formula>
        <label>Warranty Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Response__c</fullName>
        <description>This field wil capture the moment a Case Status changed for the first time, from NEW</description>
        <label>1st Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>case_Number_coordination__c</fullName>
        <formula>CaseNumber+&apos;Test&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case Number coordination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>target_Resolution_Date1__c</fullName>
        <label>Target Resolution Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>X6_Neglected_CCRP_Complaints</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CCRP_Status__c</columns>
        <columns>CCRP_Reference_Number__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Complaint</value>
        </filters>
        <filters>
            <field>CCRP_Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CASES.LAST_UPDATE_DATE_ONLY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>6. Neglected CCRP Complaints</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Closed_Case</fullName>
        <active>true</active>
        <businessProcess>Services</businessProcess>
        <description>Record Type assigned to closed case</description>
        <label>Closed Case</label>
        
    </recordTypes>
    <recordTypes>
        <fullName>Complaint</fullName>
        <active>true</active>
        <businessProcess>Services</businessProcess>
        <description>Please DO NOT directly create Case of this recordtype.Recordtype used to create Complaints to CCRP.</description>
        <label>Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>STS_Request</fullName>
        <active>true</active>
        <businessProcess>STS Request</businessProcess>
        <label>STS Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services</fullName>
        <active>true</active>
        <businessProcess>Services</businessProcess>
        <description>Record Type for Service Cases</description>
        <label>Services</label>
        
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Case_closure_information_BillableHour</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),
Billable__c, 
ISBLANK(Billable_Hours__c),
ISPICKVAL(Status, &apos;Closed&apos;)  
)</errorConditionFormula>
        <errorDisplayField>Billable_Hours__c</errorDisplayField>
        <errorMessage>Please enter Billable Hour.</errorMessage>
    </validationRules>
</CustomObject>